--- a/inlamningsuppgift2.html
+++ b/inlamningsuppgift2.html
@@ -108,7 +108,7 @@ var layout2 = {
   },
   
   yaxis: {
-    
+    title: 'Rewiev',
     showline: true
   }
 };
@@ -130,7 +130,7 @@ var layout3 = {
     zeroline: true
   },
   yaxis: {
-    
+    title: 'Rewiev',
     showline: true
   }
 };
